--- a/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
@@ -20,7 +20,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/admin/fragments/header.html :: header}"></header>
+    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container my-5">
@@ -266,7 +266,7 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/admin/fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
     <script 
