Preparar HTML para Incidencias Estadisticas | Comentar Header | Añadir HTML de errores

--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
@@ -1,4 +1,5 @@
 <header th:fragment="header" class="mb-4 bg-main">
+    <!-- Este contenido solo tendra th:href o href a las web puesto que como es dinamico, la href estatica no sive. -->
     <nav class="navbar navbar-expand-lg navbar-dark container px-3">
         <div class="container-fluid">
             <!-- Logo y nombre del sistema -->
