--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencias/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencias/estadisticas.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="e">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestion de Incidencias - Estadisitcas Incidencias</title>
+    <title>Gestión de Incidencias - Estadísticas</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Icono Web -->
+    <link rel="shortcut icon" href="../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
+
+    <!-- Required Custom Css -->
+    <link rel="stylesheet" href="../../static/css/required.css" th:href="@{/css/required.css}">
+
 </head>
+
 <body>
     <h1>PENDIENTE DE MIGRAR.</h1>
 </body>
+
 </html>
