--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencias/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencias/formulario.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Icono Web -->
     <link rel="shortcut icon" href="../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
 
     <!-- Required Custom Css -->
