--- a/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/paginaPrincipal.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="es" class="h-100">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gestión de Incidencias - Administrador</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -11,6 +13,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Icono Web -->
     <link rel="shortcut icon" href="../../static/img/webLogo.png" th:href="@{/img/webLogo.png}" type="image/x-icon">
 
     <!-- Required Custom Css -->
@@ -269,10 +272,9 @@
     <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
-    <script 
-        src="../../static/admin/javascript/paginaPrincipal/buscarSecciones.js"
+    <script src="../../static/admin/javascript/paginaPrincipal/buscarSecciones.js"
         th:src="@{/admin/javascript/paginaPrincipal/buscarSecciones.js}">
-    </script>
+        </script>
 
 </body>
 
