--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -91,7 +91,7 @@
                             </td>
                             <td class="text-center">
                                 <a th:href="@{/incidencias?estadosSeleccionados={valor}(valor=${estado.valor})}"
-                                    href="../incidencias/listar.html"
+                                    href="../incidencia/listar.html"
                                     class="btn btn-sm btn-outline-primary px-2 py-1 rounded-1 me-1">
                                     <i class="bi bi-eye"></i>
                                 </a>
