--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100 bg-light">
 
     <!-- Encabezado -->
-    <header th:replace="~{/fragments/header.html :: header}"></header>
+    <header th:replace="~{/admin/_fragments/header.html :: header}"></header>
 
     <!-- Contenido principal -->
     <main class="container flex-grow-1 my-4">
@@ -204,7 +204,7 @@
     </main>
 
     <!-- Footer -->
-    <footer th:replace="~{/fragments/footer.html :: footer}"></footer>
+    <footer th:replace="~{/admin/_fragments/footer.html :: footer}"></footer>
 
     <!--JavaScript-->
     <!-- Comentarios sobre como funcionan, dentro de cada JS. -->
@@ -216,11 +216,11 @@
         src="../../../static/admin/javascript/incidencias/formulario/establecerFechaHoy.js">
         </script>
 
-    <script th:src="/static/admin/javascript/reutilizables/buscarDesplegablesFiltros.js"
+    <script th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"
         src="../../../static/admin/javascript/reutilizables/buscarDesplegablesFiltros.js">
         </script>
 
-    <script th:src="/static/admin/javascript/incidencias/formulario/ajustarDropdows.js"
+    <script th:src="@{/admin/javascript/incidencias/formulario/ajustarDropdows.js}"
         src="../../../static/admin/javascript/incidencias/formulario/ajustarDropdows.js">
         </script>
 </body>
