--- a/GarciaMariaPablo/src/main/resources/static/css/required.css
+++ b/GarciaMariaPablo/src/main/resources/static/css/required.css
@@ -27,6 +27,11 @@
     max-width: 50vw
 }
 
+.scroll-3-items {
+    max-height: 5rem;
+    overflow-y: auto;
+}
+
 :root {
     --mainColor: #dc001b;
 }
@@ -46,11 +51,6 @@
 
 .preview-rectangle {
     min-height: 60px;
-}
-
-/** Usado en filtros */
-.max-height-3-items {
-    max-height: 11rem; 
 }
 
 /** Usado en paginaPrincipal.html */
