Cambios a los formularios para añadir limitaciones | Cambio en el modelo de incidencia para añadir limitaciones

--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
@@ -52,7 +52,8 @@
                                 <i class="bi bi-tag me-1"></i>Nombre del Estado <span class="text-main">*</span>
                             </label>
                             <input th:field="*{nombre}" type="text" class="form-control form-control-lg"
-                                placeholder="Ej. Pendiente, Resuelto..." required>
+                            placeholder="Ej. Pendiente, Resuelto..." required maxlength="50"
+                            pattern="^[\p{L}0-9\s,.-]{3,50}$" title="Debe tener entre 3 y 50 caracteres. Solo letras, números y signos básicos.">
                         </div>
 
                         <div class="col-md-4 mb-3 d-flex align-items-end">
